--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Hello Black</h1>
+    <h1>Hello Willie</h1>
 </body>
 </html>
