make use of gulp-useref to concatenate multiple files

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Gulp</title>
     <link rel="stylesheet" href="css/styles.css">
+    <!-- build:js js/main.min.js -->
+    <script src="js/lib/a-library.js"></script>
+    <script src="js/lib/another-library.js"></script>
+    <script src="js/main.js"></script>
+    <!-- endbuild -->
 </head>
 <body>
     <h1>Hello Willie</h1>
