--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Gulp</title>
+    <!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/log.css">
+    <!--endbuild-->
     <!-- build:js js/main.min.js -->
     <script src="js/lib/a-library.js"></script>
     <script src="js/lib/another-library.js"></script>
